@@ -7,7 +7,7 @@
  * See the License for the specific language governing permissions and limitations under the License. 
  */
 
-package org.apache.solr.analysis;
+package org.apache.lucene.analysis.commongrams;
 
 import java.io.IOException;
 import java.util.Arrays;
